--- a/index.html
+++ b/index.html
@@ -307,7 +307,8 @@
     </script>
 
     <style>
-        body { font-family: 'Inter', sans-serif; }
+        body { font-family: 'Inter', sans-serif;
+             bg-color: amber-100}
         ::-webkit-scrollbar { width: 6px; }
         ::-webkit-scrollbar-track { background: #f1f1f1; }
         ::-webkit-scrollbar-thumb { background: #a8a8a8; border-radius: 10px; }
