--- a/index.html
+++ b/index.html
@@ -307,8 +307,7 @@
     </script>
 
     <style>
-        body { font-family: 'Inter', sans-serif;
-             bg-color: amber-100}
+        body { font-family: 'Inter', sans-serif;}
         ::-webkit-scrollbar { width: 6px; }
         ::-webkit-scrollbar-track { background: #f1f1f1; }
         ::-webkit-scrollbar-thumb { background: #a8a8a8; border-radius: 10px; }
@@ -316,7 +315,7 @@
         input[type=number] { -moz-appearance: textfield; }
     </style>
 </head>
-<body class="bg-gray-100 min-h-screen">
+<body class="bg-amber-200 min-h-screen">
     <div class="container mx-auto max-w-lg p-4">
         <header class="my-6 text-center">
             <h1 class="text-3xl font-bold text-blue-700 mb-2">Megtakarítási Célkövető</h1>
