--- a/index.html
+++ b/index.html
@@ -315,6 +315,7 @@
         input[type=number] { -moz-appearance: textfield; }
     </style>
 </head>
+    <div class="container mx-auto max-w-lg lg:max-w-6xl p-4 transition-all duration-300">
 <main id="appContent" class="hidden">
     <div class="grid grid-cols-1 lg:grid-cols-3 gap-8 items-start">
         
